--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Популярное</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#users" data-bs-toggle="modal" data-bs-target="#usersModal">Пользователи</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
              aria-expanded="false">
@@ -35,7 +38,7 @@
               <a class="dropdown-item" href="#">Образование</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#">18 +</a>
+              <a class="dropdown-item" href="#">18+</a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -56,7 +59,11 @@
 </nav>
 
 <div class="container">
-  <h2 class="mt-4" id="greeting">Привет, гость!</h2>
+  <h2 class="mt-4">
+    <span id="greeting">Привет, гость!</span>
+    <button id="editName" class="btn bi bi-pencil-fill d-none" aria-label="Edit name" data-bs-toggle="modal" data-bs-target="#editNameModal"></button>
+  </h2>
+
   <div class="row row-cols-3 gy-4 mt-2">
     <div class="col">
       <div class="card">
@@ -134,6 +141,39 @@
   </div>
 </div>
 
+<div class="modal fade" id="editNameModal" tabindex="-1" aria-labelledby="editNameModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editNameModalLabel">Вход и регистрация</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="editNameForm" name="editName">
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" name="name">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="usersModal" tabindex="-1" aria-labelledby="usersLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="usersModalLabel">Пользователи</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+      </div>
+    </div>
+  </div>
+</div>
+<!--<img src='x' onerror='alert(JSON.stringify(initState))'>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
